akmebank-ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akmebank-ui
  labels:
    app: akmebank-ui-selector
spec:
  type: NodePort
  selector:
    app: akmebank-ui-selector
  ports:
    - port: 8080
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: akmebank-ui-cip
spec:
  type: ClusterIP
  selector:
    app: akmebank-ui-selector
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
