akmebank-ui/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akmebank-ui
spec:
  rules:
  - host: akmebank-app.cluster-ingress-subdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: akmebank-ui-cip
            port: 
              number: 80
  tls:
  - hosts:
    - akmebank-app.cluster-ingress-subdomain
    secretName: cluster-ingress-secret
