akmebank-ui/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: akmebank-ui
spec:
  host:
  port:
    targetPort: 8000
  to:
    kind: Service
    name: akmebank-ui
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
